welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:2: error: method ZigZag overrides nothing
override def ZigZag() {
             ^